Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_PurgeSetting__mdt/SOM_PurgeSetting__mdt.object-meta.xml
<CustomObject>
    <label>SOM_PurgeSetting</label>
    <pluralLabel>SOM_PurgeSettings</pluralLabel>
</CustomObject>