Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_PurgeSetting__mdt/fields/CustomApprovedStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomApprovedStatus__c</fullName>
    <label>Custom Approved Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>