Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_PurgeSetting__mdt/fields/CustomFulfilledStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomFulfilledStatus__c</fullName>
    <description>Name of the custom Order Summary Status to be queried</description>
    <label>Custom Fulfilled Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>