Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_PurgeSetting__mdt/fields/DaysOldFulfilledStatus__c.field-meta.xml
<CustomField>
    <fullName>DaysOldFulfilledStatus__c</fullName>
    <description>Number of days “old” that an Order Summary LastModifiedDate has to be to be, for purging (for fulfilled status)

Cannot be less than 7 days (failsafe)</description>
    <label>Days Old Fulfilled Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>