Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_PurgeSetting__mdt/fields/PurgePaymentGatewayLogs__c.field-meta.xml
<CustomField>
    <fullName>PurgePaymentGatewayLogs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Purge payment gateway logs flag</description>
    <label>Purge Payment Gateway Logs</label>
    <type>Checkbox</type>
</CustomField>